syntax = "proto3";
package clustertest;
option csharp_namespace = "ClusterTest.Messages";

message SendToRequest{
  string id = 1;
  int32 count = 2;
}

message Ack {}

message Ping {
  string message = 1;
}

message SlowPing {
  string message = 1;
  int32 delay_ms = 2;
}

message Pong {
  string message = 1;
  string kind = 2;
  string identity = 3;
}

message Die {
}

message WhereAreYou {
  string request_id = 1;
}

message HereIAm {
  string address = 1;
  string request_id = 2;
}


message SequentialIdRequest{
  string sequence_key = 1;
  int32 sequence_id = 2;
  string sender = 3;
}

message AskAggregator{}

message AggregatorResult{
  int32 total_messages = 1;
  int32 out_of_order_count = 2;
  int32 sequence_key_count = 3;
  int32 sender_key_count = 4;
}

message SomeGossipState{
  string key = 1;
}

message SomeTopologyGossipState{
  uint64 topology_hash = 1;
}

message IncCount{

}

message IncResponse{
  int32 count = 1;
  int32 expected_count = 2;
  string session_id = 3;
}